k8s/base/observability/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
  labels:
    app.kubernetes.io/name: monitoring
    app.kubernetes.io/part-of: petclinic
    app.kubernetes.io/managed-by: kubectl
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
---
apiVersion: v1
kind: Namespace
metadata:
  name: tracing
  labels:
    app.kubernetes.io/name: tracing
    app.kubernetes.io/part-of: petclinic
    app.kubernetes.io/managed-by: kubectl
    pod-security.kubernetes.io/enforce: baseline
    pod-security.kubernetes.io/warn: restricted
